-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5, 6.8
-
None
-
-
3
-
1bba3c2ff (dev), 38bfbbcf0 (6.9), 0fbb082ba (6.8), 1968c6696 (tqtc/lts-6.5)
-
Foundation Sprint 121
Token expiration time is represented at local time in the QAbstractOAuth2 implementation. This is potentially flaky because local time is subject to daylight savings, timezone changes etc.
Instead it is better to internally use stable UTC time, and convert it to local time when asked by the application.
For Gerrit Dashboard: QTBUG-131949 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
609711,5 | Use UTC time for representing token expiration time | dev | qt/qtnetworkauth | Status: MERGED | +2 | 0 |
610301,2 | Use UTC time for representing token expiration time | 6.9 | qt/qtnetworkauth | Status: MERGED | +2 | 0 |
610406,3 | Use UTC time for representing token expiration time | 6.8 | qt/qtnetworkauth | Status: MERGED | +2 | +1 |
610701,2 | Use UTC time for representing token expiration time | tqtc/lts-6.5 | qt/tqtc-qtnetworkauth | Status: MERGED | +2 | 0 |