Use UTC time for representing token expiration time

Using local time is potentially flaky because it is subject to daylight
savings, timezone changes etc. Using UTC internally, and changing it
to local time when needed, should be more robust.

Fixes: QTBUG-131949
Pick-to: 6.5
Change-Id: I1a7177bebb703464d8cdec0f2bbe1dedab2c97dd
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>
Reviewed-by: Magdalena Stojek <magdalena.stojek@qt.io>
(cherry picked from commit 1bba3c2ffaa930ddc25fa4a72a51c84c7ddd616c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 38bfbbcf07edbe6f4af7d2ed8c21cfedad57d1ce)